@@ -1,5 +1,7 @@
 package uk.gov.companieshouse.insolvency.data.serialization;
 
+import static uk.gov.companieshouse.insolvency.data.InsolvencyDataApiApplication.NAMESPACE;
+
 import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.JsonDeserializer;
@@ -10,9 +12,15 @@ import java.time.Instant;
 import java.time.LocalDate;
 import java.util.Date;
 
+import uk.gov.companieshouse.insolvency.data.exceptions.InternalServerErrorException;
+import uk.gov.companieshouse.insolvency.data.logging.DataMapHolder;
 import uk.gov.companieshouse.insolvency.data.util.DateTimeFormatter;
+import uk.gov.companieshouse.logging.Logger;
+import uk.gov.companieshouse.logging.LoggerFactory;
 
 public class LocalDateDeSerializer extends JsonDeserializer<LocalDate> {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(NAMESPACE);
 
     @Override
     public LocalDate deserialize(JsonParser jsonParser,
@@ -31,8 +39,9 @@ public class LocalDateDeSerializer extends JsonDeserializer<LocalDate> {
                 return DateTimeFormatter.parse(dateStr);
             }
         } catch (Exception ex) {
-            throw new RuntimeException(String.format("Failed while deserializing "
-                    + "date value for json node: %s", jsonNode), ex);
+            final String msg = "Failed to deserialise LocalDate from JSON node: %s".formatted(jsonNode);
+            LOGGER.info(msg, DataMapHolder.getLogMap());
+            throw new InternalServerErrorException(msg, ex);
         }
     }
 }
